conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: not found: value aFaireSiVraie
    aFaireSiVraie(recule())
    ^Conditions:4: error: not found: value aFaireSiElleEstFausse
    aFaireSiElleEstFausse(avance())
    ^