conditions.Conditions.scala.code
if (estFaceMur()) {
  	aFaireSiVraie(recule())
} else {
  	aFaireSiElleEstFausse(avance())
}
